# cmhash

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs  stateful.rs  stateless.rs  threaded.rs
src/: hasher.rs  lib.rs  test.rs
