[package]
name = "cmhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hasher = []

[dependencies]

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[[bench]]
name = "stateful"
harness = false

[[bench]]
name = "stateless"
harness = false

[[bench]]
name = "threaded"
harness = false